--- a/css/styles.css
+++ b/css/styles.css
@@ -501,11 +501,8 @@ ul#auth-nav li {
 
 /* Modal footer */
 
-.footer-email {
-    
-    
-    
-} 
+  
+
 .footer-modal-email {
     display: flex;
     justify-content: flex-end;
@@ -516,6 +513,7 @@ ul#auth-nav li {
     font-weight: 500;
     line-height: 1.5;
     margin-bottom: 16px;
+    letter-spacing: 0.02em
 
 }
 .email_form_input_footer {
@@ -528,6 +526,8 @@ ul#auth-nav li {
     background-color: transparent;
     width: 264px;
     height: 40px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
     
    
 }
@@ -545,6 +545,10 @@ ul#auth-nav li {
     cursor: pointer;
     transition: background-color var(--transition-dur-and-func);
     border: none;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+
   
   }
 
@@ -598,7 +602,7 @@ ul#auth-nav li {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     transition: transform var(--transition-dur-and-func);
-    padding: 24px;
+    padding: 72px 24px 24px 24px; 
    
 }
 .modal-close-btn {
@@ -616,7 +620,7 @@ ul#auth-nav li {
     height: 24px;
     padding: 0;
     cursor: pointer;
-    transition: background-color var(--transition-dur-and-func), border var(--transition-dur-and-func);
+    transition: background-color var(--transition-dur-and-func), border var(--transition-dur-and-func), ;
 
 }
 .modal-close-btn:hover,
@@ -643,36 +647,37 @@ border: none;
 
 
 .modal-text {
-    margin-top: 48px;
     margin-bottom: 16px;
     width: 100%;
     text-align: center;
-    
+    letter-spacing: 0.02em;
     font-weight: 500;
     line-height: 1.5;
+    color: var(--title-text-color);
 
 }
-.signup_form_input {
+.signup-form-input {
     width: 100%;
     height: 40px;
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
     padding-left: 38px;
-    outline: transparent;
+    background-color: transparent;
+    transition: border-color var(--transition-dur-and-func);
 }
-.signup_form_input::placeholder, 
+.signup-form-input::placeholder, 
 .modal_comment::placeholder {
     font-size: 12px;        
 }
-.signup_form_input:focus {
+.signup-form-input:focus {
     border-color: var(--accent-color);
     
     
 }
-.signup_form_input:focus + .modal-icon {
+.signup-form-input:focus + .modal-icon {
     fill: var(--accent-color);
     
-    
+   
 }
 .modal-btn {
     display: block; 
@@ -689,16 +694,21 @@ border: none;
     cursor: pointer;
     border: none;
     transition: background-color var(--transition-dur-and-func);
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04;
 }
 .modal-btn:hover,
 .modal-btn:focus {
     background-color: var(--back-accent-color)
 }
-.signup_label {
+.signup-label {
     color: var(--border-box-color);
     font-size: 12px;
     line-height: 1.17;
     margin-bottom: 4px;
+    letter-spacing: 0.04em;
+    display: block; 
 }
 .input-wrap {
     position: relative;
@@ -708,32 +718,87 @@ border: none;
     left: 16px;
     top: 50%;
     transform: translateY(-50%);
+    transition: fill var(--transition-dur-and-func)
 }
 .modal-icon:hover {
     fill: var(--accent-color);
     transition: transform var(--transition-dur-and-func);
 }
-.accept {
+
+.accept-modal-descr{
+    position: relative;
     color: var(--border-box-color);
     font-size: 12px;
     line-height: 1.17;
+    letter-spacing: 0.04em;
+    display: flex;
     margin-bottom: 24px;
-
 }
-.modal_comment  {
+
+.modal-comment  {
     width: 100%;
     height: 120px;
-    border: 1px solid rgba(46, 47, 66, 0.4);
+    border: 1px solid rgba(46, 47, 66, 0.2);
     border-radius: 4px;
-    padding-left: 16px;
-    padding-top: 8px;
     resize: none;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    background-color: transparent;
+    padding: 8px 16px; 
+    outline: transparent; 
+    transition: border-color var(--transition-dur-and-func);
+
 
 }
-.privacy-policy {
+.modal-comment:focus {
+    border-color: var(--accent-color);
+
+}
+.privacy-policy-link {
     font-size: 12px;
     color: var(--accent-color);      
 }  
+.modal-accept-span {
+    width: 16px;
+    height: 16px;
+    border: 1px solid rgba(46, 47, 66, 0.4); 
+    border-radius: 2px;
+    display: inline-flex;
+    align-items: center; 
+    justify-content: center; 
+    fill: transparent; 
+    
+}
+.accept:checked + .accept-modal-descr > .modal-accept-span {
+    background-color: var(--back-accent-color);
+    border: none;
+    fill: var(--primary-white-color);
+}  
+.modal-accept-svg {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: fill var(--transition-dur-and-func);
+}
+
+    
+.visually-hidden {
+   position: absolute;
+   width: 1px;
+   height: 1px;
+   margin: -1px;
+   border: 0; 
+   padding: 0;
+   white-space: nowrap;
+   clip-path: inset(100%);
+   clip: rect(0 0 0 0);
+   overflow: hidden;
+}
+
+
+
+
 
 /* Портфолио */
 .main-portfolio {
