--- a/css/styles.css
+++ b/css/styles.css
@@ -499,8 +499,8 @@ ul#auth-nav li {
     background-color: var(--back-green-accent-color);
 }
 
-/* Modal footer */
 
+/* Modal footer */
   
 
 .footer-modal-email {
@@ -514,8 +514,8 @@ ul#auth-nav li {
     line-height: 1.5;
     margin-bottom: 16px;
     letter-spacing: 0.02em
-
 }
+
 .email_form_input_footer {
     font-size: 12px;
     color: var(--primary-white-color);
@@ -527,16 +527,15 @@ ul#auth-nav li {
     width: 264px;
     height: 40px;
     line-height: 1.5;
-    letter-spacing: 0.04em;
-    
-   
+    letter-spacing: 0.04em;       
 }
+
 .modal-subscribe-btn {
     display: flex;
     min-width: 165px;
     height: 40px;
     background-color: var(--accent-color);
-    padding: 8px 24px;
+    padding: 8px 64px 8px 24px;
     color: var(--primary-white-color);
     justify-content: center;
     align-items: center;
@@ -548,9 +547,7 @@ ul#auth-nav li {
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.04em;
-
-  
-  }
+ }
 
   .modal-subscribe-btn:hover,
   .modal-subscribe-btn:focus {
@@ -564,16 +561,15 @@ ul#auth-nav li {
     fill: var(--primary-white-color);
     position: absolute;
     top: 50%;
-    right: 0;
+    right: 24px;
     transform: translateY(-50%);
-    
-    
-
-    
-    
+    margin-left: 16px;  
 }
 
+
 /* Modal window */
+
+
 .backdrop {
     position: fixed;
     z-index: 100;
@@ -620,7 +616,7 @@ ul#auth-nav li {
     height: 24px;
     padding: 0;
     cursor: pointer;
-    transition: background-color var(--transition-dur-and-func), border var(--transition-dur-and-func), ;
+    transition: background-color var(--transition-dur-and-func), border var(--transition-dur-and-func);
 
 }
 .modal-close-btn:hover,
@@ -645,7 +641,6 @@ border: none;
     margin-bottom: 16px;
 }
 
-
 .modal-text {
     margin-bottom: 16px;
     width: 100%;
@@ -654,8 +649,8 @@ border: none;
     font-weight: 500;
     line-height: 1.5;
     color: var(--title-text-color);
-
 }
+
 .signup-form-input {
     width: 100%;
     height: 40px;
@@ -665,19 +660,20 @@ border: none;
     background-color: transparent;
     transition: border-color var(--transition-dur-and-func);
 }
+
 .signup-form-input::placeholder, 
 .modal_comment::placeholder {
     font-size: 12px;        
 }
+
 .signup-form-input:focus {
     border-color: var(--accent-color);
-    
-    
+       
 }
+
 .signup-form-input:focus + .modal-icon {
     fill: var(--accent-color);
-    
-   
+      
 }
 .modal-btn {
     display: block; 
@@ -727,11 +723,11 @@ border: none;
 
 .accept-modal-descr{
     position: relative;
+    display: flex;
     color: var(--border-box-color);
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.04em;
-    display: flex;
     margin-bottom: 24px;
 }
 
@@ -768,8 +764,10 @@ border: none;
     align-items: center; 
     justify-content: center; 
     fill: transparent; 
+    margin-right: 8px;
     
 }
+
 .accept:checked + .accept-modal-descr > .modal-accept-span {
     background-color: var(--back-accent-color);
     border: none;
@@ -795,8 +793,6 @@ border: none;
    clip: rect(0 0 0 0);
    overflow: hidden;
 }
-
-
 
 
 
