--- a/css/styles.css
+++ b/css/styles.css
@@ -736,6 +736,7 @@ border: none;
     outline: transparent; 
     transition: border-color var(--transition-dur-and-func);
     color: rgba(46, 47, 66, 0.4);
+    color: var(--title-text-color);
 }
 .modal-comment:focus {
     border-color: var(--accent-color);
